--- a/P008151.opf/meta.yml
+++ b/P008151.opf/meta.yml
@@ -10,6 +10,7 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 538
+      base_file: v001.txt
 ebook_metadata:
   title: གསུང་འབུམ། ཤེས་རབ་འོད་ཟེར།
   author: ''
