--- a/P008151.opf/layers/v001/pagination.yml
+++ b/P008151.opf/layers/v001/pagination.yml
@@ -3,170 +3,146 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   404590d659ac437da4430e236f16730b:
-    page_index: 1a
-    page_info: null
-    reference: '15780001'
+    imgnum: 1
+    reference: 15780001.tif
     span:
       start: 0
       end: 801
   855bb5ecdab14e0dac7c447afa44a737:
-    page_index: 1b
-    page_info: null
-    reference: '15780002'
+    imgnum: 2
+    reference: 15780002.tif
     span:
       start: 806
       end: 2399
   affac89c1d0a453c97487e1172944d45:
-    page_index: 2a
-    page_info: null
-    reference: '15780003'
+    imgnum: 3
+    reference: 15780003.tif
     span:
       start: 2404
       end: 2594
   1aac881058f941af98047be7e17b4c57:
-    page_index: 2b
-    page_info: null
-    reference: '15780004'
+    imgnum: 4
+    reference: 15780004.tif
     span:
       start: 2599
       end: 2741
   71eac0ea8304487dbf93e5bfade74ff2:
-    page_index: 3a
-    page_info: null
-    reference: '15780005'
+    imgnum: 5
+    reference: 15780005.tif
     span:
       start: 2746
       end: 4237
   31b651921b4f4dd290a9f2f6433f46d6:
-    page_index: 3b
-    page_info: null
-    reference: '15780006'
+    imgnum: 6
+    reference: 15780006.tif
     span:
       start: 4242
       end: 5412
   c6d64df330f64348b80f7bf6dd9dbc38:
-    page_index: 4a
-    page_info: null
-    reference: '15780007'
+    imgnum: 7
+    reference: 15780007.tif
     span:
       start: 5417
       end: 6779
   449d4b4d3a184f008dc964865032091c:
-    page_index: 4b
-    page_info: null
-    reference: '15780008'
+    imgnum: 8
+    reference: 15780008.tif
     span:
       start: 6784
       end: 8207
   eb3ce7adae0e4e148869477f167bf836:
-    page_index: 5a
-    page_info: null
-    reference: '15780009'
+    imgnum: 9
+    reference: 15780009.tif
     span:
       start: 8212
       end: 9552
   902a6fde23bd4e9ab680c75ff7a59924:
-    page_index: 5b
-    page_info: null
-    reference: '15780010'
+    imgnum: 10
+    reference: 15780010.tif
     span:
       start: 9557
       end: 10515
   fc0e4d3c08ae4392ac1865378fb2679a:
-    page_index: 6a
-    page_info: null
-    reference: '15780011'
+    imgnum: 11
+    reference: 15780011.tif
     span:
       start: 10520
       end: 10627
   0f25034edb5944cb8247bf40d0d3ab38:
-    page_index: 6b
-    page_info: null
-    reference: '15780012'
+    imgnum: 12
+    reference: 15780012.tif
     span:
       start: 10632
       end: 10680
   5640877148294fe59efb7366978ca770:
-    page_index: 12a
-    page_info: null
-    reference: '15780023'
+    imgnum: 23
+    reference: 15780023.tif
     span:
       start: 10685
       end: 11230
   4d56cc18157f49a58c3d3076059fd3ba:
-    page_index: 13a
-    page_info: null
-    reference: '15780025'
+    imgnum: 25
+    reference: 15780025.tif
     span:
       start: 11235
       end: 12333
   53b12330c8b04fcbb94cd0372eabc236:
-    page_index: 14a
-    page_info: null
-    reference: '15780027'
+    imgnum: 27
+    reference: 15780027.tif
     span:
       start: 12338
       end: 13453
   16d19e648479441cb9a97bfb528a77fa:
-    page_index: 15a
-    page_info: null
-    reference: '15780029'
+    imgnum: 29
+    reference: 15780029.tif
     span:
       start: 13458
       end: 14583
   6526343e8762421c8cb3c9cc09d8dc0b:
-    page_index: 16a
-    page_info: null
-    reference: '15780031'
+    imgnum: 31
+    reference: 15780031.tif
     span:
       start: 14588
       end: 15783
   9b943db725a940f589793964a0ae5d4f:
-    page_index: 16b
-    page_info: null
-    reference: '15780032'
+    imgnum: 32
+    reference: 15780032.tif
     span:
       start: 15788
       end: 17000
   4efe626f88714cc89cc51d22995b9782:
-    page_index: 38a
-    page_info: null
-    reference: '15780075'
+    imgnum: 75
+    reference: 15780075.tif
     span:
       start: 17005
       end: 17965
   8ac0a40a106a4532a78b80d228dc317b:
-    page_index: 39a
-    page_info: null
-    reference: '15780077'
+    imgnum: 77
+    reference: 15780077.tif
     span:
       start: 17970
       end: 19069
   ea9dc90717174ebfa03baffbb72b3bb6:
-    page_index: 40a
-    page_info: null
-    reference: '15780079'
+    imgnum: 79
+    reference: 15780079.tif
     span:
       start: 19074
       end: 20512
   f76521b0b25a488b957fe72e2a527f98:
-    page_index: 41a
-    page_info: null
-    reference: '15780081'
+    imgnum: 81
+    reference: 15780081.tif
     span:
       start: 20517
       end: 21711
   cbde943b9b984f129ac1df1116f059d1:
-    page_index: 44b
-    page_info: null
-    reference: '15780088'
+    imgnum: 88
+    reference: 15780088.tif
     span:
       start: 21716
       end: 23060
   ab59fa448a1540719079f9b787cd9b09:
-    page_index: 45b
-    page_info: null
-    reference: '15780090'
+    imgnum: 90
+    reference: 15780090.tif
     span:
       start: 23065
       end: 24417
