--- a/P008151.opf/layers/v001/Pagination.yml
+++ b/P008151.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 26e8b7acb7094f98a1a01175825a508f
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   404590d659ac437da4430e236f16730b:
