--- a/P008151.opf/meta.yml
+++ b/P008151.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P008151
 initial_creation_type: ocr
+created_at: 27/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W23423
   title: གསུང་འབུམ། ཤེས་རབ་འོད་ཟེར།
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 538
       base_file: v001.txt
-ebook_metadata:
-  title: གསུང་འབུམ། ཤེས་རབ་འོད་ཟེར།
-  author: ''
-  sku: P008151
-  cover: cover.jpg
-  layers:
-  - pagination
